Prog: Fixing line breaks in documentation code

--- a/src/assets/styles/components/_prog-tag-control.component.sass
+++ b/src/assets/styles/components/_prog-tag-control.component.sass
@@ -44,3 +44,4 @@ prog-tag-control
 
     pre
       margin-left: 2em
+      white-space: pre-wrap
